# birdme

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: birdme.rs  config.rs  lib.rs  main.rs
server/: .env-example  Cargo.toml
server/src/: config.rs  lib.rs  logger.rs  main.rs  rate_limiter.rs  routes.rs
server/src/api/: ebird.rs  mod.rs  wiki.rs
